@@ -19,6 +19,7 @@ Fixed:
  o only expose/export symbols starting with 'ares_'
  o fix \Device\TCP handle leaks triggered by buggy iphlpapi.dll
  o init without internet gone no longer fails
+ o out of bounds memory overwrite triggered with malformed /etc/hosts file
 
 Thanks go to these friendly people for their efforts and contributions:
 
